--- a/src/main/resources/templates/manager/emp-list.html
+++ b/src/main/resources/templates/manager/emp-list.html
@@ -31,7 +31,7 @@
 <!--/_menu 作为公共模版分离出去-->
 
 <section class="Hui-article-box">
-    <nav class="breadcrumb"><a href="index.html"><i class="Hui-iconfont">&#xe67f;</i> 首页</a>
+    <nav class="breadcrumb"><a href="/index"><i class="Hui-iconfont">&#xe67f;</i> 首页</a>
         <span class="c-gray en">&gt;</span>
         员工管理
         <span class="c-gray en">&gt;</span>
@@ -84,7 +84,7 @@
                 <span class="l"> <a href="javascript:;" onclick="admin_add('添加员工','/admin/emp/doAdd','800','500')"
                                     class="btn btn-primary radius"><i
                         class="Hui-iconfont">&#xe600;</i> 添加管理员</a> </span>
-                <span class="r">共有数据：<strong>54</strong> 条</span>
+                <span class="r">共有数据：<strong id="listSize"></strong> 条</span>
             </div>
             <table class="table table-border table-bordered table-bg">
                 <thead>
@@ -105,7 +105,8 @@
                 </thead>
                 <tbody>
                 <!--@thymesVar id="empList" type="List<com.wyz.pms.core.pojo.Employee>"-->
-                <tr th:each="emp:${empList}" class="text-c">
+                <tr th:each="emp,interStat:${empList}" class="text-c">
+                    <input type="hidden" id="objSize" th:value="${interStat.size}"/>
                     <td th:text="${emp.id}"></td>
                     <td th:text="${emp.account}"></td>
                     <td th:text="${emp.name}"></td>
@@ -145,6 +146,7 @@
 <script type="text/javascript" th:src="@{/static/assets/lib/My97DatePicker/4.8/WdatePicker.js}"></script>
 <script type="text/javascript" th:src="@{/static/assets/lib/datatables/1.10.15/jquery.dataTables.min.js}"></script>
 <script type="text/javascript" th:src="@{/static/assets/lib/laypage/1.2/laypage.js}"></script>
+<script type="text/javascript" th:src="@{/static/assets/static/pms/base.js}"></script>
 <script type="text/javascript">
     /*
         参数解释：
