--- a/src/main/resources/templates/manager/facility-list.html
+++ b/src/main/resources/templates/manager/facility-list.html
@@ -31,7 +31,7 @@
 <!--/_menu 作为公共模版分离出去-->
 
 <section class="Hui-article-box">
-    <nav class="breadcrumb"><a href="index.html"><i class="Hui-iconfont">&#xe67f;</i> 首页</a>
+    <nav class="breadcrumb"><a href="/index"><i class="Hui-iconfont">&#xe67f;</i> 首页</a>
         <span class="c-gray en">&gt;</span>
         设施管理
         <span class="c-gray en">&gt;</span>
@@ -66,7 +66,7 @@
             <div class="cl pd-5 bg-1 bk-gray mt-20">
                 <span class="l"> <a href="javascript:;" onclick="admin_add('添加设施','/admin/facility/doAdd','800','500')"
                                     class="btn btn-primary radius"><i class="Hui-iconfont">&#xe600;</i> 添加设施</a> </span>
-                <span class="r">共有数据：<strong>54</strong> 条</span>
+                <span class="r">共有数据：<strong id="listSize"></strong> 条</span>
             </div>
             <table class="table table-border table-bordered table-bg">
                 <thead>
@@ -85,7 +85,8 @@
                 </tr>
                 </thead>
                 <tbody>
-                <tr th:each="facility:${facilityList}" class="text-c">
+                <tr th:each="facility,interStat:${facilityList}" class="text-c">
+                    <input type="hidden" id="objSize" th:value="${interStat.size}"/>
                     <td th:text="${facility.id}"></td>
                     <td th:text="${facility.name}"></td>
                     <td th:text="${facility.count}"></td>
@@ -117,6 +118,7 @@
 <script type="text/javascript" th:src="@{/static/assets/lib/My97DatePicker/4.8/WdatePicker.js}"></script>
 <script type="text/javascript" th:src="@{/static/assets/lib/datatables/1.10.15/jquery.dataTables.min.js}"></script>
 <script type="text/javascript" th:src="@{/static/assets/lib/laypage/1.2/laypage.js}"></script>
+<script type="text/javascript" th:src="@{/static/assets/static/pms/base.js}"></script>
 <script type="text/javascript">
     /*
         参数解释：
