--- a/src/main/resources/templates/manager/fee-list.html
+++ b/src/main/resources/templates/manager/fee-list.html
@@ -30,7 +30,7 @@
 </div>
 <!--/_menu 作为公共模版分离出去-->
 <section class="Hui-article-box">
-    <nav class="breadcrumb"><a href="index.html"><i class="Hui-iconfont">&#xe67f;</i> 首页</a>
+    <nav class="breadcrumb"><a href="/index"><i class="Hui-iconfont">&#xe67f;</i> 首页</a>
         <span class="c-gray en">&gt;</span>
         收费管理
         <span class="c-gray en">&gt;</span>
@@ -71,7 +71,7 @@
 				    </span>
                     <br/>
                     <br/>
-                    报修日期：
+                    缴费日期：
                     <input type="text" onfocus="WdatePicker({maxDate:'#F{$dp.$D(\'datemax\')||\'%y-%M-%d\'}'})"
                            id="datemin"
                            class="input-text Wdate" style="width:120px;" name="startTime">
@@ -92,12 +92,12 @@
             <div class="cl pd-5 bg-1 bk-gray mt-20">
                 <span class="l"> <a href="javascript:;" onclick="admin_add('添加收费','/admin/fee/doAdd','800','500')"
                                     class="btn btn-primary radius"><i class="Hui-iconfont">&#xe600;</i> 添加收费</a> </span>
-                <span class="r">共有数据：<strong>54</strong> 条</span>
+                <span class="r">共有数据：<strong id="listSize"></strong> 条</span>
             </div>
             <table class="table table-border table-bordered table-bg">
                 <thead>
                 <tr>
-                    <th scope="col" colspan="9">维修列表</th>
+                    <th scope="col" colspan="9">收费列表</th>
                 </tr>
                 <tr class="text-c">
                     <th width="40">编号</th>
@@ -112,7 +112,8 @@
                 </tr>
                 </thead>
                 <tbody>
-                <tr th:each="fee:${feeList}" class="text-c">
+                <tr th:each="fee,interStat:${feeList}" class="text-c">
+                    <input type="hidden" id="objSize" th:value="${interStat.size}"/>
                     <td th:text="${fee.id}"></td>
                     <td th:text="${fee.feeTypeName}"></td>
                     <td th:text="${fee.money}"></td>
@@ -150,7 +151,7 @@
 <script type="text/javascript" th:src="@{/static/assets/lib/My97DatePicker/4.8/WdatePicker.js}"></script>
 <script type="text/javascript" th:src="@{/static/assets/lib/datatables/1.10.15/jquery.dataTables.min.js}"></script>
 <script type="text/javascript" th:src="@{/static/assets/lib/laypage/1.2/laypage.js}"></script>
-
+<script type="text/javascript" th:src="@{/static/assets/static/pms/base.js}"></script>
 
 <script type="text/javascript">
     /*
