--- a/src/main/resources/templates/manager/public/_header.html
+++ b/src/main/resources/templates/manager/public/_header.html
@@ -16,8 +16,8 @@
                     <li>超级管理员</li>
                     <li class="dropDown dropDown_hover"> <a href="#" class="dropDown_A">admin <i class="Hui-iconfont">&#xe6d5;</i></a>
                         <ul class="dropDown-menu menu radius box-shadow">
-                            <li><a href="javascript:;" onClick="myselfinfo()">个人信息</a></li>
-                            <li><a href="#">切换账户</a></li>
+                            <li><a><span  onclick="admin_add('添加员工','/admin/emp/myInfo/1','500','300')">个人信息</span></a></li>
+                            <li><a><span  onclick="admin_add('修改密码','/admin/emp/doUpdatePassword/1','600','350')">修改密码</span></a></li>
                             <li><a href="#">退出</a></li>
                         </ul>
                     </li>
