--- a/src/main/resources/templates/manager/house-list.html
+++ b/src/main/resources/templates/manager/house-list.html
@@ -8,8 +8,8 @@
     <meta name="viewport"
           content="width=device-width,initial-scale=1,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no"/>
     <meta http-equiv="Cache-Control" content="no-siteapp"/>
-    <link rel="Bookmark" href="favicon.ico">
-    <link rel="Shortcut Icon" href="favicon.ico"/>
+    <link rel="Bookmark" href="../../static/assets/favicon.ico">
+    <link rel="Shortcut Icon" href="../../static/assets/favicon.ico"/>
     <link rel="stylesheet" type="text/css" th:href="@{/assets/static/h-ui/css/H-ui.min.css}"/>
     <link rel="stylesheet" type="text/css" th:href="@{/assets/static/h-ui.admin/css/H-ui.admin.css}"/>
     <link rel="stylesheet" type="text/css" th:href="@{/assets/lib/Hui-iconfont/1.0.8/iconfont.css}"/>
@@ -52,11 +52,11 @@
                            name="houseType">
                     <input type="text" class="input-text" style="width:120px" placeholder="业主编号" id="ownerId"
                            name="ownerId">
-                    <input type="text" class="input-text" style="width:130px" placeholder="开始" id="startArea"
-                           name="startPrice">
+                    <input type="text" class="input-text" style="width:130px" placeholder="面积开始" id="startArea"
+                           name="startArea">
                     -
-                    <input type="text" class="input-text" style="width:130px" placeholder="结束" id="endArea"
-                           name="endPrice">
+                    <input type="text" class="input-text" style="width:130px" placeholder="面积结束" id="endArea"
+                           name="endArea">
                     <span class="select-box" style="width:90px">
 				<select class="select" name="status" size="1">
 					<option value="">是否出售</option>
