--- a/src/main/resources/templates/owner/change-password.html
+++ b/src/main/resources/templates/owner/change-password.html
@@ -10,81 +10,50 @@
     <meta http-equiv="Cache-Control" content="no-siteapp"/>
     <link rel="Bookmark" href="../../static/assets/favicon.ico">
     <link rel="Shortcut Icon" href="../../static/assets/favicon.ico"/>
+
     <link rel="stylesheet" type="text/css" th:href="@{/assets/static/h-ui/css/H-ui.min.css}"/>
     <link rel="stylesheet" type="text/css" th:href="@{/assets/static/h-ui.admin/css/H-ui.admin.css}"/>
     <link rel="stylesheet" type="text/css" th:href="@{/assets/lib/Hui-iconfont/1.0.8/iconfont.css}"/>
+
     <link rel="stylesheet" type="text/css" th:href="@{/assets/static/h-ui.admin/skin/default/skin.css}" id="skin"/>
     <link rel="stylesheet" type="text/css" th:href="@{/assets/static/h-ui.admin/css/style.css}"/>
     <!--/meta 作为公共模版分离出去-->
 
-    <title>添加员工</title>
+    <title>修改密码</title>
 </head>
 <body>
 <article class="cl pd-20">
-    <!--action="/emp/add" method="post"-->
-    <form class="form form-horizontal " id="form-admin-add">
-        <input type="hidden" name="id" id="id" value=""/>
+    <form class="form form-horizontal" id="form-change-password">
+        <input type="hidden" name="id" id="id" th:field="${owner.id}"/>
         <div class="row cl">
-            <label class="form-label col-xs-4 col-sm-3"><span class="c-red">*</span>账号：</label>
-            <div class="formControls col-xs-8 col-sm-9">
-                <input type="text" class="input-text" value="" placeholder="" id="account" name="account">
-            </div>
+            <label class="form-label col-xs-4 col-sm-3"><span class="c-red">*</span>编号：</label>
+            <div class="formControls col-xs-8 col-sm-9" th:text="${owner.id}"></div>
         </div>
         <div class="row cl">
-            <label class="form-label col-xs-4 col-sm-3"><span class="c-red">*</span>初始密码：</label>
+            <label class="form-label col-xs-4 col-sm-3"><span class="c-red">*</span>账户：</label>
+            <div class="formControls col-xs-8 col-sm-9" name="phone" th:text="${owner.phone}"></div>
+        </div>
+        <div class="row cl">
+            <label class="form-label col-xs-4 col-sm-3"><span class="c-red">*</span>姓名：</label>
+            <div class="formControls col-xs-8 col-sm-9" th:text="${owner.name}"></div>
+        </div>
+        <div class="row cl">
+            <label class="form-label col-xs-4 col-sm-3"><span class="c-red">*</span>新密码：</label>
             <div class="formControls col-xs-8 col-sm-9">
-                <input type="password" class="input-text" autocomplete="off" placeholder="密码" id="password"
-                       name="password">
+                <input type="password" class="input-text" autocomplete="off" name="password"
+                       id="password">
             </div>
         </div>
         <div class="row cl">
             <label class="form-label col-xs-4 col-sm-3"><span class="c-red">*</span>确认密码：</label>
             <div class="formControls col-xs-8 col-sm-9">
-                <input type="password" class="input-text" autocomplete="off" placeholder="确认新密码" id="password2"
-                       name="password2">
+                <input type="password" class="input-text" autocomplete="off" name="password2"
+                       id="password2">
             </div>
-        </div>
-        <div class="row cl">
-            <label class="form-label col-xs-4 col-sm-3"><span class="c-red">*</span>姓名：</label>
-            <div class="formControls col-xs-8 col-sm-9">
-                <input type="text" class="input-text" placeholder="" id="name" name="name">
-            </div>
-        </div>
-        <div class="row cl">
-            <label class="form-label col-xs-4 col-sm-3"><span class="c-red">*</span>性别：</label>
-            <div class="formControls col-xs-8 col-sm-9 skin-minimal">
-                <div class="radio-box">
-                    <input name="sex" type="radio" id="sex-1" value="女" checked>
-                    <label for="sex-1">男</label>
-                </div>
-                <div class="radio-box">
-                    <input type="radio" id="sex-2" name="sex" value="女">
-                    <label for="sex-2">女</label>
-                </div>
-            </div>
-        </div>
-        <div class="row cl">
-            <label class="form-label col-xs-4 col-sm-3"><span class="c-red">*</span>手机：</label>
-            <div class="formControls col-xs-8 col-sm-9">
-                <input type="text" class="input-text" value="" placeholder="" id="phone" name="phone">
-            </div>
-        </div>
-        <div class="row cl">
-            <label class="form-label col-xs-4 col-sm-3"><span class="c-red">*</span>角色：</label>
-            <div class="formControls col-xs-8 col-sm-9"> <span class="select-box" style="width:150px;">
-				<select class="select" name="roleId" size="1">
-					<option value="-1" selected>请选择角色</option>
-					<option value="0">管理员</option>
-					<option value="1">安保员</option>
-					<option value="2">清洁员</option>
-					<option value="3">维修员</option>
-				</select>
-				</span></div>
         </div>
         <div class="row cl">
             <div class="col-xs-8 col-sm-9 col-xs-offset-4 col-sm-offset-3">
-                <input class="btn btn-primary radius" onclick="insert()" type="button"
-                       value="&nbsp;&nbsp;提交&nbsp;&nbsp;">
+                <input class="btn btn-primary radius" onclick="update()" type="button" value="&nbsp;&nbsp;保存&nbsp;&nbsp;">
             </div>
         </div>
     </form>
@@ -102,12 +71,19 @@
 <script type="text/javascript" th:src="@{/static/assets/lib/jquery.validation/1.14.0/jquery.validate.js}"></script>
 <script type="text/javascript" th:src="@{/static/assets/lib/jquery.validation/1.14.0/validate-methods.js}"></script>
 <script type="text/javascript" th:src="@{/static/assets/lib/jquery.validation/1.14.0/messages_zh.js}"></script>
+
 <script type="text/javascript">
-    function insert() {
+    function update() {
+		var pwd1 = document.getElementById("password").value;
+		var pwd2 = document.getElementById("password2").value;
+		if(pwd1!=pwd2){
+			alert("输入的密码不匹配");
+			return false;
+		}
         //得到表单数据，序列化表单
-        var employee = $("#form-admin-add").serialize();
+        var employee = $("#form-change-password").serialize();
         //使用ajax post提交方式 ，默认json数据
-        $.post("http://localhost:8380/admin/emp/add", employee, function (data) {
+        $.post("http://localhost:8380/owner/base/updatePassword", employee, function (data) {
             //回调回来的数据data
             if (data.code == '200') {
                 alert('响应码：' + data.code + " ,消息：" + data.message);
@@ -117,10 +93,12 @@
                 //关闭弹框
                 parent.layer.close(index);
             } else {
-                alert('添加失败！！！！,响应码：' + data.code + " ,消息：" + data.message);
+                alert('修改失败！！！！,响应码：' + data.code + " ,消息：" + data.message);
             }
         });
     }
+
+
 </script>
 <!--/请在上方写此页面业务相关的脚本-->
 </body>
